--- a/source/includes/events/_auth.created.md.erb
+++ b/source/includes/events/_auth.created.md.erb
@@ -4,26 +4,28 @@
 
 ```json
 {
-  "_id": "580e3e11dec21e861b5a3719",
-  "type": "auth.created",
-  "created": "2016-04-20T16:51:12Z",
-  "payload": {
-    "resource": {
-      "type": "auth",
-      "id": "579b695decfa11012711875d"
-    },
-    "data": {
-      "auth" : {
-        "_id" : "5b157888cb7e60000bfcaa41",
-        "items" : [
-          "bill"
-        ], 
-        "company" : {
-          "_id" : "55942f330cfcfd6c4ed529d8",
-          "name" : "Geico"
-        }, 
-        "status" : {
-          "type" : "verified"
+  "event": {
+    "_id": "580e3e11dec21e861b5a3719",
+    "type": "auth.created",
+    "created": "2016-04-20T16:51:12Z",
+    "payload": {
+      "resource": {
+        "type": "auth",
+        "id": "579b695decfa11012711875d"
+      },
+      "data": {
+        "auth" : {
+          "_id" : "5b157888cb7e60000bfcaa41",
+          "items" : [
+            "bill"
+          ], 
+          "company" : {
+            "_id" : "55942f330cfcfd6c4ed529d8",
+            "name" : "Geico"
+          }, 
+          "status" : {
+            "type" : "verified"
+          }
         }
       }
     }
