--- a/source/includes/events/_auth.failed.md.erb
+++ b/source/includes/events/_auth.failed.md.erb
@@ -4,21 +4,23 @@
 
 ```json
 {
-  "_id": "580e3e11dec21e861b5a3719",
-  "type": "auth.failed",
-  "created": "2016-04-20T16:51:12Z",
-  "payload": {
-    "resource": {
-      "type": "client",
-      "id": "579b695decfa11012711875d"
-    },
-    "data": { 
-      "reason": {
-        "message": "You may want to double check your information."
+  "event": {
+    "_id": "580e3e11dec21e861b5a3719",
+    "type": "auth.failed",
+    "created": "2016-04-20T16:51:12Z",
+    "payload": {
+      "resource": {
+        "type": "client",
+        "id": "579b695decfa11012711875d"
       },
-      "company" : {
-        "_id" : "55942f330cfcfd6c4ed529d8",
-        "name" : "Geico"
+      "data": { 
+        "reason": {
+          "message": "You may want to double check your information."
+        },
+        "company" : {
+          "_id" : "55942f330cfcfd6c4ed529d8",
+          "name" : "Geico"
+        }
       }
     }
   }
