--- a/source/includes/events/_auth.invalid.md.erb
+++ b/source/includes/events/_auth.invalid.md.erb
@@ -4,18 +4,20 @@
 
 ```json
 {
-  "_id": "580e3e11dec21e861b5a3719",
-  "type": "auth.invalid",
-  "created": "2016-04-20T16:51:12Z",
-  "payload": {
-    "resource": {
-      "type": "auth",
-      "id": "579b695decfa11012711875d"
-    },
-    "data": { 
-      "company" : {
-        "_id" : "55942f330cfcfd6c4ed529d8",
-        "name" : "Geico"
+  "event": {
+    "_id": "580e3e11dec21e861b5a3719",
+    "type": "auth.invalid",
+    "created": "2016-04-20T16:51:12Z",
+    "payload": {
+      "resource": {
+        "type": "auth",
+        "id": "579b695decfa11012711875d"
+      },
+      "data": { 
+        "company" : {
+          "_id" : "55942f330cfcfd6c4ed529d8",
+          "name" : "Geico"
+        }
       }
     }
   }
