--- a/source/includes/events/_bill.created.md.erb
+++ b/source/includes/events/_bill.created.md.erb
@@ -4,13 +4,15 @@
 
 ```json
 {
-  "_id": "580e3e11dec21e861b5a3719",
-  "type": "bill.created",
-  "created": "2016-04-20T16:51:12Z",
-  "payload": {
-    "resource": {
-      "type": "bill",
-      "id": "579b695decfa11012711875d"
+  "event": {
+    "_id": "580e3e11dec21e861b5a3719",
+    "type": "bill.created",
+    "created": "2016-04-20T16:51:12Z",
+    "payload": {
+      "resource": {
+        "type": "bill",
+        "id": "579b695decfa11012711875d"
+      }
     }
   }
 }
