--- a/source/includes/events/_bill.update.md.erb
+++ b/source/includes/events/_bill.update.md.erb
@@ -4,23 +4,25 @@
 
 ```json
 {
-  "_id": "580e3e11dec21e861b5a3719",
-  "type": "bill.update",
-  "created": "2016-04-20T16:51:12Z",
-  "payload": {
-    "resource": {
-      "type": "bill",
-      "id": "579b695decfa11012711875d"
-    },
-    "data": {
-      "company": {
-        "name": "Netflix"
+  "event": {
+    "_id": "580e3e11dec21e861b5a3719",
+    "type": "bill.update",
+    "created": "2016-04-20T16:51:12Z",
+    "payload": {
+      "resource": {
+        "type": "bill",
+        "id": "579b695decfa11012711875d"
       },
-      "previous": {
-        "balance": "25.21"
-      },
-      "current": {
-        "balance": "52.11"
+      "data": {
+        "company": {
+          "name": "Netflix"
+        },
+        "previous": {
+          "balance": "25.21"
+        },
+        "current": {
+          "balance": "52.11"
+        }
       }
     }
   }
