--- a/source/includes/events/_swap.success.md.erb
+++ b/source/includes/events/_swap.success.md.erb
@@ -4,16 +4,18 @@
 
 ```json
 {
-  "_id": "580e3e11dec21e861b5a3719",
-  "type": "swap.success",
-  "created": "2016-04-20T16:51:12Z",
-  "payload": {
-    "resource": {
-      "type": "swap",
-      "id": "579b695decfa11012711875d"
-    },
-    "data": {
-      "clientId" : "5b157888cb7e60000bfcaa41"
+  "event": {
+    "_id": "580e3e11dec21e861b5a3719",
+    "type": "swap.success",
+    "created": "2016-04-20T16:51:12Z",
+    "payload": {
+      "resource": {
+        "type": "swap",
+        "id": "579b695decfa11012711875d"
+      },
+      "data": {
+        "clientId" : "5b157888cb7e60000bfcaa41"
+      }
     }
   }
 }
