--- a/source/includes/events/_auth.mfa.md.erb
+++ b/source/includes/events/_auth.mfa.md.erb
@@ -4,24 +4,26 @@
 
 ```json
 {
-  "_id": "580e3e11dec21e861b5a3719",
-  "type": "auth.mfa-required",
-  "created": "2016-04-20T16:51:12Z",
-  "payload": {
-    "resource": {
-      "type": "client",
-      "id": "579b695decfa11012711875d"
-    },
-    "data": { 
-      "token": "566595c8ce88ccec69328566",
-      "method": "questions",
-      "mfa": [{ 
-        "question": "What is the name of your first pet?",
-        "identifier": "Bk0zwVx1Z"
-      }],
-      "company" : {
-        "_id" : "55942f330cfcfd6c4ed529d8",
-        "name" : "Geico"
+  "event": {
+    "_id": "580e3e11dec21e861b5a3719",
+    "type": "auth.mfa-required",
+    "created": "2016-04-20T16:51:12Z",
+    "payload": {
+      "resource": {
+        "type": "client",
+        "id": "579b695decfa11012711875d"
+      },
+      "data": { 
+        "token": "566595c8ce88ccec69328566",
+        "method": "questions",
+        "mfa": [{ 
+          "question": "What is the name of your first pet?",
+          "identifier": "Bk0zwVx1Z"
+        }],
+        "company" : {
+          "_id" : "55942f330cfcfd6c4ed529d8",
+          "name" : "Geico"
+        }
       }
     }
   }
@@ -32,25 +34,27 @@
 
 ```json
 {
-  "_id": "580e3e11dec21e861b5a3719",
-  "type": "auth.mfa-required",
-  "created": "2016-04-20T16:51:12Z",
-  "payload": {
-    "resource": {
-      "type": "client",
-      "id": "579b695decfa11012711875d"
-    },
-    "data": { 
-      "token": "566595c8ce88ccec69328566",
-      "method": "code",
-      "mfa": [
-        { "mask": "t...t@example.com", "type": "email", "identifier": "r1g0mvVg1Z", "label": "Email: t...t@example.com" },
-        { "mask": "xxx-xxx-1234", "type": "phone", "identifier": "B1gyVvElJZ", "label": "Phone: xxx-xxx-1234" },
-        { "mask": "xxx-xxx-1234", "type": "text", "identifier": "SkbkEP4ekW", "label": "Text: xxx-xxx-1234" }
-      ],
-      "company" : {
-        "_id" : "55942f330cfcfd6c4ed529d8",
-        "name" : "Geico"
+  "event": {
+    "_id": "580e3e11dec21e861b5a3719",
+    "type": "auth.mfa-required",
+    "created": "2016-04-20T16:51:12Z",
+    "payload": {
+      "resource": {
+        "type": "client",
+        "id": "579b695decfa11012711875d"
+      },
+      "data": { 
+        "token": "566595c8ce88ccec69328566",
+        "method": "code",
+        "mfa": [
+          { "mask": "t...t@example.com", "type": "email", "identifier": "r1g0mvVg1Z", "label": "Email: t...t@example.com" },
+          { "mask": "xxx-xxx-1234", "type": "phone", "identifier": "B1gyVvElJZ", "label": "Phone: xxx-xxx-1234" },
+          { "mask": "xxx-xxx-1234", "type": "text", "identifier": "SkbkEP4ekW", "label": "Text: xxx-xxx-1234" }
+        ],
+        "company" : {
+          "_id" : "55942f330cfcfd6c4ed529d8",
+          "name" : "Geico"
+        }
       }
     }
   }
