--- a/source/includes/events/_bill.payment.failed.md.erb
+++ b/source/includes/events/_bill.payment.failed.md.erb
@@ -6,18 +6,20 @@
 
 ```json
 {
-  "_id": "580e3e11dec21e861b5a3719",
-  "type": "bill.payment.failed",
-  "created": "2016-04-20T16:51:12Z",
-  "payload": {
-    "resource": {
-      "type": "bill",
-      "id": "579b695decfa11012711875d"
-    },
-    "data": {
-      "amount": "25.21",
-      "company": {
-        "name": "Netflix"
+  "event": {
+    "_id": "580e3e11dec21e861b5a3719",
+    "type": "bill.payment.failed",
+    "created": "2016-04-20T16:51:12Z",
+    "payload": {
+      "resource": {
+        "type": "bill",
+        "id": "579b695decfa11012711875d"
+      },
+      "data": {
+        "amount": "25.21",
+        "company": {
+          "name": "Netflix"
+        }
       }
     }
   }
