--- a/source/includes/products/biller-direct.md.erb
+++ b/source/includes/products/biller-direct.md.erb
@@ -1,7 +1,24 @@
 ## Biller Direct
 
+> Host
+```
+https://biller-direct.unbill.us (production)
+https://sb-biller-direct.unbill.us (sandbox)
+```
+
 ![Biller Direct](https://www.q2ebanking.com/img/pages/q2_open/q2-biller-direct/biller-direct_spend.gif)
 
 Biller Direct is a card-enabled bill pay solution designed to dramatically improve the user experience and economic model of bill pay.
 
 [View demo](https://biller-direct.unbill.us)
+
+### URL parameters
+
+The following URL parameters can be optionally passed into the Biller Direct URL to customize the experience.
+
+Parameter | Description
+----- | -----------
+`companyId` | Deeplink to a specific bill for the `companyId` specified if a bill already exists, or fallback to the authentication screen for the specified `companyId`.
+`billId` | Setting to a specific [Bill](#bill) `_id` will deeplink the user into the detailed view of the bill.
+`skipOnboarding` | Setting to `true` will skip the introductary screens and animations.
+`cardPaymentsOnly` | Limit searches to companies that support card-based payments.
