Session idleness BDCS-402

--- a/source/includes/products/connect.md.erb
+++ b/source/includes/products/connect.md.erb
@@ -20,6 +20,7 @@ Event | Description
 ----- | -----------
 `auth` | The user successfully authenticated with a company.
 `close` | The user closed the module without completing an authentication.
+`alive` | Emitted every 30 seconds to indicate that the user is not idle.
 
 ### URL parameters
 
