--- a/source/includes/products/biller-direct.md.erb
+++ b/source/includes/products/biller-direct.md.erb
@@ -12,6 +12,14 @@ Biller Direct is a card-enabled bill pay solution designed to dramatically impro
 
 [View demo](https://biller-direct.unbill.us)
 
+### Events
+
+Biller Direct will emit events back to your app using the [postMessage](https://developer.mozilla.org/en-US/docs/Web/API/Window/postMessage) API or [WKScriptMessageHandler](https://developer.apple.com/documentation/webkit/wkscriptmessagehandler) on iOS, allowing you to decide what to do after the user is finished.
+
+Event | Description
+----- | -----------
+`alive` | Emitted every 30 seconds to indicate that the user is not idle.
+
 ### URL parameters
 
 The following URL parameters can be optionally passed into the Biller Direct URL to customize the experience.
