Remove image url from categories

--- a/source/includes/api/company/_categories.md.erb
+++ b/source/includes/api/company/_categories.md.erb
@@ -14,10 +14,7 @@ curl "<%= config.host %>/company/categories" \
 {
   "data": [{
     "name": "Electric",
-    "type": "electric",
-    "image": {
-      "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/mobile/billers/category_icons/electric.svg"
-    }
+    "type": "electric"
   }]
 }
 ```
