Added documentation on example code, fixed incorrect info about events, added changelog

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -78,6 +78,7 @@ includes:
   - events/bill.payment.sent
   - events/bill.payment.failed
   - events/swap.success
+  - api/changelog/index
 
 search: true
 ---
