--- a/source/includes/products/connect.md.erb
+++ b/source/includes/products/connect.md.erb
@@ -19,7 +19,7 @@ Connect will emit events back to your app using the [postMessage](https://develo
 Event | Description
 ----- | -----------
 `auth` | The user successfully authenticated with a company.
-`close` | The user closed the module without completing an authentication.
+`exit` | The user exited the module without completing an authentication.
 `alive` | Emitted every 30 seconds to indicate that the user is not idle.
 
 ### URL parameters
