--- a/source/includes/_introduction.md.erb
+++ b/source/includes/_introduction.md.erb
@@ -57,6 +57,7 @@ Username | Description
 `testmfaquestion` | Test an authentication requiring question-based MFA.
 `testmfacode` | Test an authentication requiring code-based MFA.
 `testpaymentfail` | Test a payment failure.
+`testswap` | Test performing a post-authentication swap. Useful when using Connect with a `paymentMethodId`.
 
 You may test a successful payment within the Sandbox environment by using `4111111111111111` as the card number, with any valid expiration, zipcode, and random 3-digit CVV.
 
