Added fees to docs

--- a/source/includes/api/company/_object.md.erb
+++ b/source/includes/api/company/_object.md.erb
@@ -33,14 +33,64 @@
       "name": "password",
       "label": "Password"
     }]
-  },
+  }, 
   "geo": {
     "lat": 30.70,
     "lng": -95.53,
     "state_short": "TX",
     "state_long": "Texas",
     "zipcode": "77340"
-  }
+  },
+  "fees": {
+      "ach": {
+          "rate": 1.5,
+          "percentage": false
+      },
+      "cards": {
+          "american express": {
+              "credit": {
+                  "rate": 1.5,
+                  "percentage": false
+              }
+          },
+          "discover": {
+              "credit": {
+                  "rate": 1.5,
+                  "percentage": false
+              },
+              "debit": {
+                  "rate": 1.5,
+                  "percentage": false
+              }
+          },
+          "mastercard": {
+              "credit": {
+                  "rate": 1.5,
+                  "percentage": false
+              },
+              "debit": {
+                  "rate": 1.5,
+                  "percentage": false
+              }
+          },
+          "visa": {
+              "credit": {
+                  "rate": 1.5,
+                  "percentage": false
+              },
+              "debit": {
+                  "rate": 1.5,
+                  "percentage": false
+              }
+          },
+          "amex": {
+              "debit": {
+                  "rate": 1.5,
+                  "percentage": false
+              }
+          }
+      }
+  }  
 }
 ```
 
