--- a/source/includes/api/client/_create-token.md.erb
+++ b/source/includes/api/client/_create-token.md.erb
@@ -10,14 +10,14 @@ curl "<%= config.host %>/client/create-token" \
     "identifier": "Bk0zwVx1Z",
     "nonce": false,
     "meta": {
-      "firstName": "Sean",
-      "lastName": "Hill",
-      "email": "sean@hill.com",
-      "phone": "4801428531",
+      "firstName": "Demo",
+      "lastName": "User",
+      "email": "demo@demo.com",
+      "phone": "123-123-1234",
       "address1": "123 Api St.",
       "address2": "P.O. Box 283",
-      "city": "Mesa",
-      "state": "AZ",
+      "city": "Demo",
+      "state": "Q2",
       "zipcode": "12345"
     }
   }'
