--- a/source/includes/api/client/_create.md.erb
+++ b/source/includes/api/client/_create.md.erb
@@ -9,14 +9,14 @@ curl "<%= config.host %>/client" \
   -d '{
     "identifier": "Bk0zwVx1Z",
     "meta": {
-      "firstName": "Sean",
-      "lastName": "Hill",
-      "email": "sean@hill.com",
-      "phone": "4801428531",
+      "firstName": "Demo",
+      "lastName": "User",
+      "email": "demo@demo.com",
+      "phone": "123-123-1234",
       "address1": "123 Api St.",
       "address2": "P.O. Box 283",
-      "city": "Mesa",
-      "state": "AZ",
+      "city": "Demo",
+      "state": "Q2",
       "zipcode": "12345"
     }
   }'
