--- a/source/includes/api/changelog/_index.md.erb
+++ b/source/includes/api/changelog/_index.md.erb
@@ -3,3 +3,4 @@
 ### Jan 29th, 2019
 - Correction made to the Connect product events. The `close` event should have been documented as `exit`.
 - Added documentation regarding our integration examples repository.
+- Added `company.userPresenceIsRequired` to [company object](#the-company-object) and documentation for [Connect](#connect).
