--- a/source/includes/products/connect.md.erb
+++ b/source/includes/products/connect.md.erb
@@ -22,6 +22,19 @@ Event | Description
 `exit` | The user exited the module without completing an authentication.
 `alive` | Emitted every 30 seconds to indicate that the user is not idle.
 
+### userPresenceIsRequired
+
+If the biller requires that the user is present to pass through any [MFA](#auth-mfa) flows with every login,
+as indicated by the `company.userPresenceIsRequired` flag, there are a number of constraints to consider when designing your user experience:
+
+- Bill data cannot be updated ad-hoc without the user first passing through MFA.
+- Payments must be completed in real-time (not scheduled) since the user must be present.
+- Likewise, Swaps must also be completed in real-time with the user present.
+
+Instead of calling the typical API routes, you'll need to open Connect to perform these actions immediately after a successful authentication. The user won't need
+ to re-enter their username and password, but may need to step through MFA. Using the `companyId`, `items`, and `paymentMethodId` URL parameters as 
+ documented below, you'll be able to build an experience while allowing users the liberty of maintaining their approach to account security.
+
 ### URL parameters
 
 The following URL parameters can be optionally passed into the Connect URL to customize the experience.
@@ -30,6 +43,6 @@ Parameter | Description
 ----- | -----------
 `companyId` | Deeplink to a specific `companyId`, skipping the search screen.
 `cardPaymentsOnly` | Limit searches to companies that support card-based payments.
-`items` | *CardSwap only:* Can be set to `swap` to automatically create a [Swap](#swap) once an authentication is successful.
-`paymentMethodId` | *CardSwap only:* Sets a previously added payment method to be used for a swap once an authentication is successful.
+`items` | Indicates the next desired action once an authentication is successful. Set to `swap` to automatically create a [Swap](#swap). Set to `bill` to update bill data. Set to `payment` to make a payment towards the balance.. 
+`paymentMethodId` | Sets a previously added payment method to be used for a `swap` or `payment` once an authentication is successful.
 
