--- a/source/includes/api/client/_create-token.md.erb
+++ b/source/includes/api/client/_create-token.md.erb
@@ -33,6 +33,8 @@ curl "<%= config.host %>/client/create-token" \
 
 Create a token to be used for SSO into applications.
 
+When creating subsequent tokens for an existing `client`, be sure to use the same `identifier` value. If a client already exists with this `identifier`, then any actions taken within the context of a [Product](#products). will be linked to that client.
+
 ### HTTP Request
 
 `POST <%= config.host %>/client/create-token`
