--- a/source/includes/events/_auth.success.md.erb
+++ b/source/includes/events/_auth.success.md.erb
@@ -8,6 +8,8 @@
     "_id": "580e3e11dec21e861b5a3719",
     "type": "auth.success",
     "created": "2016-04-20T16:51:12Z",
+    "clientId": "579b695decfa110127118752",
+    "partnerId": "55942f330cfcfd6c4ed529d9",      
     "payload": {
       "resource": {
         "type": "client",
