--- a/source/includes/products/connect.md.erb
+++ b/source/includes/products/connect.md.erb
@@ -22,18 +22,18 @@ Event | Description
 `exit` | The user exited the module without completing an authentication.
 `alive` | Emitted every 30 seconds to indicate that the user is not idle.
 
-### userPresenceIsRequired
+### userPresenceRequired
 
 If the biller requires that the user is present to pass through any [MFA](#auth-mfa) flows with every login,
-as indicated by the `company.userPresenceIsRequired` flag, there are a number of constraints to consider when designing your user experience:
+as indicated by the `company.userPresenceRequired` flag, there are a number of constraints to consider when designing your user experience:
 
 - Bill data cannot be updated ad-hoc without the user first passing through MFA.
 - Payments must be completed in real-time (not scheduled) since the user must be present.
 - Likewise, Swaps must also be completed in real-time with the user present.
 
 Instead of calling the typical API routes, you'll need to open Connect to perform these actions immediately after a successful authentication. The user won't need
- to re-enter their username and password, but may need to step through MFA. Using the `companyId`, `items`, and `paymentMethodId` URL parameters as 
- documented below, you'll be able to build an experience while allowing users the liberty of maintaining their approach to account security.
+ to re-enter their username and password, but may need to step through MFA. Using the `billId`, `items`, and `paymentMethodId` URL parameters as 
+ documented below, you'll be able to make payments in real-time, while allowing users the liberty of maintaining their approach to account security.
 
 ### URL parameters
 
@@ -42,6 +42,7 @@ The following URL parameters can be optionally passed into the Connect URL to cu
 Parameter | Description
 ----- | -----------
 `companyId` | Deeplink to a specific `companyId`, skipping the search screen.
+`billId` | Can be used in conjunction with `paymentMethodId` to perform a real-time payment when `company.userPresenceRequired` is `true`.
 `cardPaymentsOnly` | Limit searches to companies that support card-based payments.
 `items` | Indicates the next desired action once an authentication is successful. Set to `swap` to automatically create a [Swap](#swap). Set to `bill` to update bill data. Set to `payment` to make a payment towards the balance.. 
 `paymentMethodId` | Sets a previously added payment method to be used for a `swap` or `payment` once an authentication is successful.
