--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -7,6 +7,7 @@ includes:
   - errors
   - request-id
   - getting-started
+  - rsa-encryption
   - products/integration
   - products/connect
   - products/cardswap
