BDCS-671 Added client identifier to event object

--- a/source/includes/api/changelog/_index.md.erb
+++ b/source/includes/api/changelog/_index.md.erb
@@ -1,5 +1,8 @@
 # Changelog
 
+### Feb 21th, 2019
+- Added the client `identifier` to the event object.
+
 ### Feb 14th, 2019
 - Corrected documentation regarding `company.userPresenceRequired`
 - Added support for `billId` as a URL parameter to Connect & Biller Direct.
