--- a/source/includes/events/_auth.mfa.md.erb
+++ b/source/includes/events/_auth.mfa.md.erb
@@ -9,11 +9,12 @@
     "type": "auth.mfa-required",
     "created": "2016-04-20T16:51:12Z",
     "clientId": "579b695decfa110127118752",
-    "partnerId": "55942f330cfcfd6c4ed529d9",      
+    "partnerId": "55942f330cfcfd6c4ed529d9",  
+    "identifier": "example-id-123",            
     "payload": {
       "resource": {
         "type": "client",
-        "id": "579b695decfa11012711875d"
+        "id": "579b695decfa110127118752"
       },
       "data": { 
         "token": "566595c8ce88ccec69328566",
