--- a/source/includes/events/_bill.update.md.erb
+++ b/source/includes/events/_bill.update.md.erb
@@ -9,7 +9,8 @@
     "type": "bill.update",
     "created": "2016-04-20T16:51:12Z",
     "clientId": "579b695decfa110127118752",
-    "partnerId": "55942f330cfcfd6c4ed529d9",      
+    "partnerId": "55942f330cfcfd6c4ed529d9",   
+    "identifier": "example-id-123", 
     "payload": {
       "resource": {
         "type": "bill",
