--- a/source/includes/events/_object.md.erb
+++ b/source/includes/events/_object.md.erb
@@ -8,6 +8,7 @@
   "type": "bill.update",
   "created": "2016-04-20T16:51:12Z",
   "clientId": "579b695decfa110127118752",
+  "identifier": "example-id-123",
   "partnerId": "55942f330cfcfd6c4ed529d9",  
   "payload": {
     "resource": {
