BDCS-671 Add identifier to params list of event object

--- a/source/includes/events/_object.md.erb
+++ b/source/includes/events/_object.md.erb
@@ -33,6 +33,7 @@ Attribute | Description
 `type` | Description of the event: e.g. `bill.issued`, `bill.updated`, etc.
 `clientId` | The `id` of the `client` to which the event pertains.
 `partnerId` | The `id` of the `partner` to which the event pertains. 
+`identifier` | Your internal `identifier` associated with the `client`.
 `created` | An `ISO 8601` formatted date of when this event was created.
 `payload` | Object containing data associated with the event..
 `payload.resource` | Object containing data associated with the resource of the event.
