BDCS-808 Update docs for JHA

--- a/source/includes/api/changelog/_index.md.erb
+++ b/source/includes/api/changelog/_index.md.erb
@@ -1,5 +1,11 @@
 # Changelog
 
+### April 1st, 2019
+- Added `auth` object to the `bill.created` event.
+- Added the payment method object to all bill payment events.
+- Added [Bill payment scheduled event](#bill-payment-scheduled).
+- Changed API endpoints to use the `q2open.io` URL instead of `unbill.us`.
+
 ### Feb 21th, 2019
 - Added the client `identifier` to the event object.
 
