--- a/source/includes/products/cardswap.md.erb
+++ b/source/includes/products/cardswap.md.erb
@@ -2,12 +2,12 @@
 
 > Host
 ```
-https://cardswap.unbill.us (production)
-https://sb-cardswap.unbill.us (sandbox)
+https://cardswap.q2open.io (production)
+https://sb-cardswap.q2open.io (sandbox)
 ```
 
 ![CardSwap](https://www.q2ebanking.com/img/pages/q2_open/cardswap/cardswap_select.gif)
 
 Q2 CardSwap™ is the first switch kit for subscription and eCommerce merchants, allowing users to put your card top-of-wallet for their favorite services—all in one place.
 
-[View demo](https://cardswap.unbill.us)
+[View demo](https://cardswap.q2open.io)
