--- a/source/includes/events/_bill.created.md.erb
+++ b/source/includes/events/_bill.created.md.erb
@@ -4,20 +4,36 @@
 
 ```json
 {
-  "event": {
-    "_id": "580e3e11dec21e861b5a3719",
-    "type": "bill.created",
-    "created": "2016-04-20T16:51:12Z",
-    "clientId": "579b695decfa110127118752",
-    "partnerId": "55942f330cfcfd6c4ed529d9",      
-    "identifier": "example-id-123",
-    "payload": {
-      "resource": {
-        "type": "bill",
-        "id": "579b695decfa11012711875d"
+   "event":{
+      "_id":"580e3e11dec21e861b5a3719",
+      "type":"bill.created",
+      "created":"2016-04-20T16:51:12Z",
+      "clientId":"579b695decfa110127118752",
+      "partnerId":"55942f330cfcfd6c4ed529d9",
+      "identifier":"example-id-123",
+      "payload":{
+         "resource":{
+            "type":"bill",
+            "id":"579b695decfa11012711875d"
+         },
+         "data":{
+            "auth":{
+               "_id":"579b695decea110719b1874d",
+               "status":{
+                  "type":"verified"
+               },
+               "company":{
+                  "_id":"579b695decea110719b1874d",
+                  "name":"XYZ Electric",
+                  "logo":{
+                     "url":"https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/7242937ba29042cce61a8e4745269fce.png",
+                     "background":false
+                  }
+               }
+            }
+         }
       }
-    }
-  }
+   }
 }
 ```
 
@@ -26,3 +42,4 @@ When a bill is found on an associated auth.
 Attribute | Description
 --------- | -----------
 `type` | `bill.created`
+`payload.data.auth` | The [auth object](#the-auth-object) linked to the bill.
