--- a/source/includes/products/biller-direct.md.erb
+++ b/source/includes/products/biller-direct.md.erb
@@ -2,15 +2,15 @@
 
 > Host
 ```
-https://biller-direct.unbill.us (production)
-https://sb-biller-direct.unbill.us (sandbox)
+https://biller-direct.q2open.io (production)
+https://sb-biller-direct.q2open.io (sandbox)
 ```
 
 ![Biller Direct](https://www.q2ebanking.com/img/pages/q2_open/q2-biller-direct/biller-direct_spend.gif)
 
 Biller Direct is a card-enabled bill pay solution designed to dramatically improve the user experience and economic model of bill pay.
 
-[View demo](https://biller-direct.unbill.us)
+[View demo](https://biller-direct.q2open.io)
 
 ### Events
 
