--- a/source/includes/products/connect.md.erb
+++ b/source/includes/products/connect.md.erb
@@ -2,15 +2,15 @@
 
 > Host
 ```
-https://connect.unbill.us (production)
-https://sb-connect.unbill.us (sandbox)
+https://connect.q2open.io (production)
+https://sb-connect.q2open.io (sandbox)
 ```
 
 ![Connect](https://www.q2ebanking.com/img/pages/q2_open/q2-biller-direct/biller-direct_add-bills.gif)
 
 Connect is a drop-in module that provides a secure, elegant authentication flow for each company that the <%= config.apiName %> supports. Connect makes it secure and easy for clients to link their accounts, while doing the heavy lifting for the authentication.
 
-[View demo](https://connect.unbill.us)
+[View demo](https://connect.q2open.io)
 
 ### Events
 
