--- a/source/includes/products/integration.md.erb
+++ b/source/includes/products/integration.md.erb
@@ -7,7 +7,7 @@ Our white-label products are the fastest way to implement our API's functionalit
 Integration with our products is straightforward.
 
 1. Create a one-time use token by making a call to the `/client/create-token` endpoint.
-2. SSO into the white-label product by passing in the token as a URL parameter. An example URL would look like this: `https://product.unbill.us?token=123`.
+2. SSO into the white-label product by passing in the token as a URL parameter. An example URL would look like this: `https://product.q2open.io?token=123`.
 
 ## Example Code
 
