--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -77,6 +77,7 @@ includes:
   - events/bill.created
   - events/bill.update
   - events/bill.payment.sent
+  - events/bill.payment.scheduled
   - events/bill.payment.failed
   - events/swap.success
   - api/changelog/index
