BDCS-808 Updated API endpoints

--- a/source/includes/_introduction.md.erb
+++ b/source/includes/_introduction.md.erb
@@ -6,7 +6,7 @@
 
 ```
 <%= config.host %> (production)
-https://sb.unbill.co/v1 (sandbox)
+https://sb-api.q2open.io/v1 (sandbox)
 ```
 
 > Resource URL Patterns
