BDCS-917 fix typo

--- a/source/includes/events/_bill.payment.scheduled.md.erb
+++ b/source/includes/events/_bill.payment.scheduled.md.erb
@@ -56,7 +56,7 @@ When a payment is made towards a bill's outstanding balance. Note that the `payl
 
 Attribute | Description
 --------- | -----------
-`type` | `bill.payment.sent`
+`type` | `bill.payment.scheduled`
 `payload.data.company` | The [company object](#the-company-object) linked to this resource.
 `payload.data.amount` | The amount sent to the company.
 `payload.data.payDate` | The date the bill should be paid.
