BDCS-487 Removed auth endpoints in favor of Connect

--- a/source/includes/_authentication.md.erb
+++ b/source/includes/_authentication.md.erb
@@ -3,7 +3,7 @@
 > Example Request
 
 ```shell
-  curl "<%= config.host %>/auth"
+  curl "<%= config.host %>/bill/list/579b695decfa11012711875d"
     -H "<%= config.auth %>"
 ```
 
