--- a/source/includes/_introduction.md.erb
+++ b/source/includes/_introduction.md.erb
@@ -56,6 +56,7 @@ Username | Description
 `testfail` | Test an authentication failure.
 `testmfaquestion` | Test an authentication requiring question-based MFA.
 `testmfacode` | Test an authentication requiring code-based MFA.
+`testmfaprompt` | Test an authentication requiring prompt-based MFA.
 `testpaymentfail` | Test a payment failure.
 `testswap` | Test performing a post-authentication swap. Useful when using Connect with a `paymentMethodId`.
 
