--- a/source/includes/api/auth/_status.md.erb
+++ b/source/includes/api/auth/_status.md.erb
@@ -63,7 +63,7 @@ The user's auth has been verified. No actions are required.
 
 ### authenticate
 
-The auth's credentials are no longer valid and need to be reauthenticated. Make a request to the `/auth` endpoint with updated credentials to remove this status.
+The auth's credentials are no longer valid and need to be reauthenticated using the [Connect](#connect) product.
 
 ![Bill Authenticate](<%= config.s3 %>/bill-authenticate.png)
 
