--- a/source/includes/api/changelog/_index.md.erb
+++ b/source/includes/api/changelog/_index.md.erb
@@ -1,5 +1,8 @@
 # Changelog
 
+### May 7th, 2019
+- Removed authentication endpoints in favor of the [Connect](#connect) component.
+
 ### April 1st, 2019
 - Added `auth` object to the `bill.created` event.
 - Added the payment method object to all bill payment events.
