--- a/source/includes/api/swap/_create.md.erb
+++ b/source/includes/api/swap/_create.md.erb
@@ -3,7 +3,7 @@
 > Example Request
 
 ```shell
-curl "<%= config.host %>/auth" \
+curl "<%= config.host %>/swap" \
   -H "<%= config.auth %>" \
   -H "Content-Type: application/json" \
   -d '{
