--- a/source/includes/products/connect.md.erb
+++ b/source/includes/products/connect.md.erb
@@ -8,7 +8,7 @@ https://sb-connect.q2open.io (sandbox)
 
 ![Connect](https://www.q2ebanking.com/img/pages/q2_open/q2-biller-direct/biller-direct_add-bills.gif)
 
-Connect is a drop-in module that provides a secure, elegant authentication flow for each company that the <%= config.apiName %> supports. Connect makes it secure and easy for clients to link their accounts, while doing the heavy lifting for the authentication.
+Connect is a drop-in module that provides a secure, elegant authentication flow for each company that the <%= config.apiName %> supports. Connect makes it secure and easy for [clients](#client) to link their accounts, while doing the heavy lifting for the authentication.
 
 [View demo](https://connect.q2open.io)
 
@@ -24,15 +24,15 @@ Event | Description
 
 ### userPresenceRequired
 
-If the biller requires that the user is present to pass through any [MFA](#auth-mfa) flows with every login,
+If the company requires that the user is present to pass through any security flows with every login,
 as indicated by the `company.userPresenceRequired` flag, there are a number of constraints to consider when designing your user experience:
 
-- Bill data cannot be updated ad-hoc without the user first passing through MFA.
+- Bill data cannot be updated ad-hoc without the user first passing through security.
 - Payments must be completed in real-time (not scheduled) since the user must be present.
 - Likewise, Swaps must also be completed in real-time with the user present.
 
 Instead of calling the typical API routes, you'll need to open Connect to perform these actions immediately after a successful authentication. The user won't need
- to re-enter their username and password, but may need to step through MFA. Using the `billId`, `items`, and `paymentMethodId` URL parameters as 
+ to re-enter their username and password, but may need to step through security. Using the `billId`, `items`, and `paymentMethodId` URL parameters as 
  documented below, you'll be able to make payments in real-time, while allowing users the liberty of maintaining their approach to account security.
 
 ### URL parameters
