--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -15,10 +15,10 @@ includes:
 #  - resources
   - api/auth/index
   - api/auth/object
-  - api/auth/auth
+#  - api/auth/auth
 #  - api/auth/auth-flow
 #  - api/auth/item
-  - api/auth/auth-step
+#  - api/auth/auth-step
   - api/auth/status
   - api/auth/list
   - api/auth/fix-hold
@@ -70,8 +70,8 @@ includes:
   - events/types
   # - events/auth.created
   - events/auth.success
-  - events/auth.mfa
-  - events/auth.failed
+  # - events/auth.security
+  # - events/auth.failed
   - events/auth.invalid
   - events/auth.hold
   - events/bill.created
