--- a/source/includes/_getting-started.md.erb
+++ b/source/includes/_getting-started.md.erb
@@ -1,21 +1,5 @@
 ## Getting Started
 
-> Example Request
-
-```shell
-curl "<%= config.host %>/auth" \
-  -H "<%= config.auth %>" \
-  -H "Content-Type: application/json" \
-  -d '{
-    "clientId": "566595c8ce88ccec69328566",
-    "companyId": "56e1dbb5443b10a3bd403fcf",
-    "form": {
-      "username": "Johnny",
-      "password": "Appleseed"
-    }
-  }'
-```
-
 To authenticate bills with your users, you may use the following flow.
 
 ### User Creation
@@ -25,10 +9,7 @@ To authenticate bills with your users, you may use the following flow.
 
 ### Authentication
 
-1. Search for the company you'd like to add from the `/company/search` endpoint.
-2. Provide your user with a "bill authentication" view populated with the login fields retrieved from the desired company.
-3. Have your user fill out their credentials, and then send those credentials to the `/auth` endpoint.
-4. <%= config.brand %> will begin the authentication process and respond with [events](#event).
+1. Link accounts by integrating the [Connect](#connect) product into your application.
 
 ### Bills
 
