--- a/source/includes/events/_auth.security.md.erb
+++ b/source/includes/events/_auth.security.md.erb
@@ -1,12 +1,12 @@
-## Auth MFA required
+## Auth security input required
 
-> Example `auth.mfa-required` Event (Question Based)
+> Example `auth.security-input-required` Event (Question Based)
 
 ```json
 {
   "event": {
     "_id": "580e3e11dec21e861b5a3719",
-    "type": "auth.mfa-required",
+    "type": "auth.security-input-required",
     "created": "2016-04-20T16:51:12Z",
     "clientId": "579b695decfa110127118752",
     "partnerId": "55942f330cfcfd6c4ed529d9",  
@@ -19,7 +19,7 @@
       "data": { 
         "token": "566595c8ce88ccec69328566",
         "method": "questions",
-        "mfa": [{ 
+        "input": [{ 
           "question": "What is the name of your first pet?",
           "identifier": "Bk0zwVx1Z"
         }],
@@ -33,13 +33,13 @@
 }
 ```
 
-> Example `auth.mfa-required` Event (Code Based)
+> Example `auth.security-input-required` Event (Code Based)
 
 ```json
 {
   "event": {
     "_id": "580e3e11dec21e861b5a3719",
-    "type": "auth.mfa-required",
+    "type": "auth.security-input-required",
     "created": "2016-04-20T16:51:12Z",
     "payload": {
       "resource": {
@@ -49,7 +49,7 @@
       "data": { 
         "token": "566595c8ce88ccec69328566",
         "method": "code",
-        "mfa": [
+        "input": [
           { "mask": "t...t@example.com", "type": "email", "identifier": "r1g0mvVg1Z", "label": "Email: t...t@example.com" },
           { "mask": "xxx-xxx-1234", "type": "phone", "identifier": "B1gyVvElJZ", "label": "Phone: xxx-xxx-1234" },
           { "mask": "xxx-xxx-1234", "type": "text", "identifier": "SkbkEP4ekW", "label": "Text: xxx-xxx-1234" }
@@ -68,8 +68,8 @@ When additional authentication steps are required. Responses will be sent to the
 
 Attribute | Description
 --------- | -----------
-`type` | `auth.mfa-required`
+`type` | `auth.security-input-required`
 `payload.data.token` | The token to be sent in the request to the `/auth/step` endpoint.
-`payload.data.method` | The type of MFA that is required.
-`payload.data.mfa` | The requested MFA.
+`payload.data.method` | The type of security that is required.
+`payload.data.input` | The requested security input.
 `payload.data.company` | The [company object](#the-company-object) linked to this resource.
