Updated to add documentation for swap success event updates

--- a/source/includes/api/bill/_object.md.erb
+++ b/source/includes/api/bill/_object.md.erb
@@ -36,7 +36,7 @@ Attribute | Description
 `lastPaidOn` | The date when this bill was last paid.
 `payDate` | The date when the next bill will be paid.
 `status` | [Status](#bill-status) of the bill.
-`company` | Company Object
+`company` | [Company object](#the-company-object) related to the bill.
 `settings` | Settings for a bill.
 `settings.recurring` | Whether or not payments are scheduled automatically. Possible values are `enabled`, `disabled`.
 `settings.schedule` | The [schedule](#bill-payment-schedule) for when a bill payment will be made.
