--- a/source/includes/api/changelog/_index.md.erb
+++ b/source/includes/api/changelog/_index.md.erb
@@ -2,6 +2,8 @@
 
 ### May 7th, 2019
 - Removed authentication endpoints in favor of the [Connect](#connect) component.
+- Added `identifier` to [payment method object](#the-payment-method-object).
+- Added [payment method object](#the-payment-method-object) and [company object](#the-company-object) to the [swap.success](#swap-success) event.
 
 ### April 1st, 2019
 - Added `auth` object to the `bill.created` event.
