--- a/source/includes/api/payment/_list.md.erb
+++ b/source/includes/api/payment/_list.md.erb
@@ -16,6 +16,7 @@ curl "<%= config.host %>/payment/list/566595c8ce88ccec69328566" \
     {
       "_id": "580e3754dec21e861b5a3718",
       "type": "card",
+      "identifier": "optional_custom_identifier",
       "status": "verified",
       "default": true,
       "name": "Sean Hill",
@@ -29,6 +30,7 @@ curl "<%= config.host %>/payment/list/566595c8ce88ccec69328566" \
     {
       "_id": "580e3e11dec21e861b5a3719",
       "type": "bank",
+      "identifier": "optional_custom_identifier",
       "status": "declined",
       "name": "Sean Hill",
       "bank": {
