--- a/source/includes/api/swap/_object.md.erb
+++ b/source/includes/api/swap/_object.md.erb
@@ -45,6 +45,6 @@ Attribute | Description
 --------- | -----------
 `_id` | ID of the swap. Unavailable when the `status.type` is `pending`.
 `status` | [Status](#swap-status) of the swap.
-`auth` | [Auth Object](#the-auth-object)
-`company` | [Company Object](#the-company-object)
-`paymentMethod` | [Payment method Object](#the-payment-method-object)
+`auth` | [Auth object](#the-auth-object) related to the swap.
+`company` | [Company object](#the-company-object) related to the swap.
+`paymentMethod` | [Payment method object](#the-payment-method-object) to be swapped in.
