--- a/source/includes/events/_bill.payment.failed.md.erb
+++ b/source/includes/events/_bill.payment.failed.md.erb
@@ -11,7 +11,7 @@
     "type": "bill.payment.failed",
     "created": "2016-04-20T16:51:12Z",
     "clientId": "579b695decfa110127118752",
-    "partnerId": "55942f330cfcfd6c4ed529d9",  
+    "partnerId": "55942f330cfcfd6c4ed529d9",
     "identifier": "example-id-123",
     "payload": {
       "resource": {
@@ -40,7 +40,7 @@
             "assignedBills":[
               "5c5b2eba5ddb120427c41ba3"
             ]
-        }        
+        }
       }
     }
   }
@@ -52,6 +52,6 @@ When a payment is unsuccessful.
 Attribute | Description
 --------- | -----------
 `type` | `bill.payment.failed`
-`payload.data.company` | The [company object](#the-company-object) linked to this resource.
-`payload.data.paymentMethod` | The [payment method object](#the-payment-method-object) linked to the payment.
+`payload.data.company` | The [company](#the-company-object) linked to this resource.
+`payload.data.paymentMethod` | The [payment method](#the-payment-method-object) linked to the payment.
 `payload.data.amount` | The amount of the unsuccesful payment.
