--- a/source/includes/events/_swap.success.md.erb
+++ b/source/includes/events/_swap.success.md.erb
@@ -9,7 +9,7 @@
     "type": "swap.success",
     "created": "2016-04-20T16:51:12Z",
     "clientId": "579b695decfa11012711875d",
-    "partnerId": "55942f330cfcfd6c4ed529d8",    
+    "partnerId": "55942f330cfcfd6c4ed529d8",
     "payload": {
       "resource": {
         "type": "swap",
@@ -29,3 +29,5 @@ Attribute | Description
 --------- | -----------
 `type` | `swap.success`
 `payload.data.clientId` | The clientId linked to the swap.
+`payload.data.company` | The [company object](#the-company-object) related to the swap.
+`payload.data.paymentMethod` | The [payment method object](#the-payment-method-object) linked to the swap.
