--- a/source/includes/events/_bill.payment.failed.md.erb
+++ b/source/includes/events/_bill.payment.failed.md.erb
@@ -10,6 +10,9 @@
     "_id": "580e3e11dec21e861b5a3719",
     "type": "bill.payment.failed",
     "created": "2016-04-20T16:51:12Z",
+    "clientId": "579b695decfa110127118752",
+    "partnerId": "55942f330cfcfd6c4ed529d9",
+    "identifier": "example-id-123",
     "payload": {
       "resource": {
         "type": "bill",
@@ -19,6 +22,24 @@
         "amount": "25.21",
         "company": {
           "name": "Netflix"
+        },
+        "paymentMethod":{
+            "_id": "5c5b2ed67d94870391c30b33",
+            "type": "card",
+            "name": "Johnny Appleseed",
+            "status": "verified",
+            "default":true,
+            "card":{
+              "number": "XXXX1111",
+              "bin": "41111111",
+              "brand": "visa",
+              "type": "credit",
+              "expDate": "2021-06-01T12:00:00.000Z",
+              "cancelled":false
+            },
+            "assignedBills":[
+              "5c5b2eba5ddb120427c41ba3"
+            ]
         }
       }
     }
@@ -31,5 +52,6 @@ When a payment is unsuccessful.
 Attribute | Description
 --------- | -----------
 `type` | `bill.payment.failed`
-`payload.data.company` | The [company object](#the-company-object) linked to this resource.
+`payload.data.company` | The [company](#the-company-object) linked to this resource.
+`payload.data.paymentMethod` | The [payment method](#the-payment-method-object) linked to the payment.
 `payload.data.amount` | The amount of the unsuccesful payment.
