--- a/source/includes/events/_object.md.erb
+++ b/source/includes/events/_object.md.erb
@@ -7,6 +7,9 @@
   "_id": "580e3e11dec21e861b5a3719",
   "type": "bill.update",
   "created": "2016-04-20T16:51:12Z",
+  "clientId": "579b695decfa110127118752",
+  "identifier": "example-id-123",
+  "partnerId": "55942f330cfcfd6c4ed529d9",  
   "payload": {
     "resource": {
       "id": "579b695decfa11012711875d",
@@ -28,6 +31,9 @@ Attribute | Description
 --------- | -----------
 `_id` | ID of the event.
 `type` | Description of the event: e.g. `bill.issued`, `bill.updated`, etc.
+`clientId` | The `id` of the `client` to which the event pertains.
+`partnerId` | The `id` of the `partner` to which the event pertains. 
+`identifier` | Your internal `identifier` associated with the `client`.
 `created` | An `ISO 8601` formatted date of when this event was created.
 `payload` | Object containing data associated with the event..
 `payload.resource` | Object containing data associated with the resource of the event.
