--- a/source/includes/_introduction.md.erb
+++ b/source/includes/_introduction.md.erb
@@ -6,7 +6,7 @@
 
 ```
 <%= config.host %> (production)
-https://sb.unbill.co/v1 (sandbox)
+https://sb-api.q2open.io/v1 (sandbox)
 ```
 
 > Resource URL Patterns
@@ -21,7 +21,7 @@ https://sb.unbill.co/v1 (sandbox)
 
 Welcome! The <%= config.apiName %> allows developers to receive user-authorized bill data and make payments on behalf of a user.
 
-Here you will find information on how to integrate with and use the <%= config.apiName %>. We've tried to make this documentation user-friendly and example-filled, but please [drop us a line](mailto:api@unbill.us) with any questions. If you're planning to use our API in production, you should take a look at our [privacy policy](http://unbill.us/privacy.html).
+Here you will find information on how to integrate with and use the <%= config.apiName %>. We've tried to make this documentation user-friendly and example-filled, but please [drop us a line](mailto:api@unbill.us) with any questions.
 
 The <%= config.apiName %> uses standard HTTP [verbs](http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html) to communicate and HTTP [response codes](http://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html) to indicate status and errors. All responses come in standard [JSON](http://www.json.org/). The <%= config.apiName %> is served over HTTPS to ensure data privacy, HTTP is not supported.
 
@@ -56,9 +56,18 @@ Username | Description
 `testfail` | Test an authentication failure.
 `testmfaquestion` | Test an authentication requiring question-based MFA.
 `testmfacode` | Test an authentication requiring code-based MFA.
+`testmfaprompt` | Test an authentication requiring prompt-based MFA.
 `testpaymentfail` | Test a payment failure.
+`testswap` | Test performing a post-authentication swap. Useful when using Connect with a `paymentMethodId`.
 
 You may test a successful payment within the Sandbox environment by using `4111111111111111` as the card number, with any valid expiration, zipcode, and random 3-digit CVV.
+
+### Sandbox Limitations
+
+- Always use the Test Merchant during development.
+- You cannot make payments on Sandbox.
+- When using your real account, there may be cases where it will accept invalid credentials or not retrieve your bill data. If you'd like to do a real test with these providers, you'll need to use our production environment.
+- We're working to improve our sandbox environment to be more consistent with what you would experience on production when interacting with billers besides our Test Merchant.
 
 ## Gaining Access
 
